[gd_scene load_steps=12 format=3 uid="uid://dhyqlveownkli"]

[ext_resource type="PackedScene" uid="uid://cjqvqwm2xpq4t" path="res://card_field.tscn" id="1_7wufp"]
[ext_resource type="Script" path="res://scripts/deck_editor.gd" id="1_17ww2"]
[ext_resource type="PackedScene" uid="uid://q1boos0cq5c3" path="res://card.tscn" id="2_jc880"]
[ext_resource type="Script" path="res://scripts/card_group_container.gd" id="3_m1s7r"]
[ext_resource type="Texture2D" uid="uid://btpthtmmbkli7" path="res://resources/background.jpg" id="3_px0t5"]
[ext_resource type="Script" path="res://scripts/background.gd" id="4_pyoa7"]
[ext_resource type="Texture2D" uid="uid://cc57ub34dl8hl" path="res://resources/card_shadow.png" id="5_e8bxn"]
[ext_resource type="PackedScene" path="res://card_info_container.tscn" id="6_yrkhv"]
[ext_resource type="Script" path="res://scripts/deck_editor_exit_button.gd" id="7_bpa5l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yho6h"]
size = Vector2(640, 458)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3p71a"]
size = Vector2(1149.13, 162.875)

[node name="DeckEditor" type="Node2D"]
position = Vector2(57, 42)
script = ExtResource("1_17ww2")
card_scene = ExtResource("2_jc880")

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.2484, 0.2484, 0.2484, 1)
position = Vector2(531, 266)
rotation = -0.790634
scale = Vector2(0.72, 0.72)
texture = ExtResource("3_px0t5")
offset = Vector2(-81.195, -88.115)
script = ExtResource("4_pyoa7")

[node name="CardGroupContainer" type="Area2D" parent="."]
script = ExtResource("3_m1s7r")

[node name="CardField" parent="CardGroupContainer" instance=ExtResource("1_7wufp")]
position = Vector2(87, 77)
scale = Vector2(1.3, 1.3)
cards_offset = Vector2(100, 2.08165e-12)
card_count_per_line = 5
scrollable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardGroupContainer"]
position = Vector2(323, 203)
shape = SubResource("RectangleShape2D_yho6h")

[node name="CardShadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.933333)
z_index = 499
position = Vector2(542, 716)
rotation = 1.5708
scale = Vector2(0.84, 1.33661)
texture = ExtResource("5_e8bxn")

[node name="DeckContainer" type="Area2D" parent="."]
z_index = 500

[node name="Deck" parent="DeckContainer" instance=ExtResource("1_7wufp")]
position = Vector2(48, 525)
cards_offset = Vector2(50, 0)
base_z_index = 500

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeckContainer"]
position = Vector2(518.438, 527.563)
shape = SubResource("RectangleShape2D_3p71a")

[node name="CardInfoContainer" parent="." instance=ExtResource("6_yrkhv")]
z_index = 1000
position = Vector2(835, 156)
scale = Vector2(1.165, 1.165)

[node name="ExitButton" type="Button" parent="."]
offset_left = 997.0
offset_top = -2.0
offset_right = 1062.0
offset_bottom = 75.0
text = "SAVE
&
EXIT"
script = ExtResource("7_bpa5l")

[connection signal="input_event" from="CardGroupContainer" to="CardGroupContainer" method="_on_input_event"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="ExitButton" to="ExitButton" method="_on_pressed"]
